Fix for stretched images on Portfolio

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -214,6 +214,10 @@ html {
   padding: 10px;
 }
 
+.grid-wrapper {
+  display: grid;
+}
+
 /* -------------------------------------------------contact page------------*/
 
 .contact-container {
